--- a/admin/server/templates/index.html
+++ b/admin/server/templates/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title><%= title %></title>
     <link rel="stylesheet" href="<%= codemirrorPath %>/codemirror.css">
-    <link rel="stylesheet" href="<%= adminPath %>/styles/keystone.min.css"><link rel="stylesheet" href="/styles/admin.custom.css">
+    <link rel="stylesheet" href="<%= resourceURI %>/styles/keystone.min.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   </head>
   <body>
@@ -17,20 +17,20 @@
       var Keystone = <%- JSON.stringify(keystone) %>;
     </script>
 <%# Old jQuery, editor and Cloudinary scripts %>
-    <script src="<%= adminPath %>/js/lib/jquery/jquery-1.10.2.min.js"></script>
+    <script src="<%= resourceURI %>/js/lib/jquery/jquery-1.10.2.min.js"></script>
 <% if (fieldTypes.wysiwyg) { -%>
-    <script src="<%= adminPath %>/js/lib/tinymce/tinymce.min.js"></script>
+    <script src="<%= resourceURI %>/js/lib/tinymce/tinymce.min.js"></script>
 <% if (cloudinaryScript) { -%>
-    <script src="<%= adminPath %>/js/lib/jqueryfileupload/vendor/jquery.ui.widget.js"></script>
-    <script src="<%= adminPath %>/js/lib/jqueryfileupload/jquery.iframe-transport.js"></script>
-    <script src="<%= adminPath %>/js/lib/jqueryfileupload/jquery.fileupload.js"></script>
-    <script src="<%= adminPath %>/js/lib/cloudinary/jquery.cloudinary.js"></script>
+    <script src="<%= resourceURI %>/js/lib/jqueryfileupload/vendor/jquery.ui.widget.js"></script>
+    <script src="<%= resourceURI %>/js/lib/jqueryfileupload/jquery.iframe-transport.js"></script>
+    <script src="<%= resourceURI %>/js/lib/jqueryfileupload/jquery.fileupload.js"></script>
+    <script src="<%= resourceURI %>/js/lib/cloudinary/jquery.cloudinary.js"></script>
     <%- cloudinaryScript %>
 <% } } -%>
 <% if (fieldTypes.code) { -%>
     <script src="<%= codemirrorPath %>/codemirror-compressed.js"></script>
 <% } -%>
-    <script src="<%= adminPath %>/js/packages.js"></script>
+    <script src="<%= resourceURI %>/js/packages.js"></script>
     <script src="<%= adminPath %>/js/fields.js"></script>
     <script src="<%= adminPath %>/js/admin.js"></script>
 <% if (env === 'production' && ga.property && ga.domain) { -%>
@@ -43,5 +43,5 @@
       ga('send', 'pageview');
     </script>
 <% } -%>
-  <script src="/js/admin.custom.js"></script></body>
+  </body>
 </html>
