--- a/admin/server/templates/index.html
+++ b/admin/server/templates/index.html
@@ -30,7 +30,7 @@
 <% if (fieldTypes.code) { -%>
     <script src="<%= codemirrorPath %>/codemirror-compressed.js"></script>
 <% } -%>
-    <script src="<%= resourceURI %>/js/packages.js"></script>
+    <script src="<%= adminPath %>/js/packages.js"></script>
     <script src="<%= adminPath %>/js/fields.js"></script>
     <script src="<%= adminPath %>/js/admin.js"></script>
 <% if (env === 'production' && ga.property && ga.domain) { -%>
